MINOR: fix the lineage node size and overflow issue on right panel (#18942)
* fix the lineage node size and overflow issue on right panel

* fix sonar issue

--- a/openmetadata-ui/src/main/resources/ui/src/styles/components/size.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/components/size.less
@@ -110,6 +110,9 @@
 .w-max-200 {
   max-width: 200px;
 }
+.w-max-350 {
+  max-width: 350px;
+}
 .w-max-400 {
   max-width: 400px;
 }
